objects/UPC_Site_Address__c.object
<CustomObject>
    <description>Created by Nexell to manage multiple addresses to sites.</description>
    <fields>
        <fullName>UPC_Address_Record_Type__c</fullName>
        <description>Used tp display the upc address record type in the site address page layout</description>
        <formula>UPC_Address__r.RecordType.Name</formula>
        <label>UPC Address Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Address__c</fullName>
        <label>UPC Address</label>
        <referenceTo>UPC_ADBASE__c</referenceTo>
        <relationshipLabel>Site Addresses</relationshipLabel>
        <relationshipName>Site_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UPC_Availability__c</fullName>
        <formula>&quot;dummy_value&quot;</formula>
        <label>Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Available_Access_Technologies__c</fullName>
        <description>Returns a CSV list of available access technologies. Used in the CPQ product definition rules.</description>
        <formula>IF(UPC_HFC_Checkbox__c &amp;&amp; UPC_FTTH_Checkbox__c, &apos;FTTH,HFC&apos;,

IF(UPC_HFC_Checkbox__c, &apos;HFC&apos;,

IF(UPC_FTTH_Checkbox__c, &apos;FTTH&apos;, &apos;&apos;)))</formula>
        <label>Available Access Technologies</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_BBCS_Alert__c</fullName>
        <formula>UPC_Address__r.UPC_BBCS_Alert__c</formula>
        <label>BBCS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_BBCS_Checkbox__c</fullName>
        <formula>IF( UPC_Address__r.UPC_BBCS__c ,true,false)</formula>
        <label>BBCS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_BBCS_Download__c</fullName>
        <formula>UPC_Address__r.UPC_BBCS_Download__c</formula>
        <label>BBCS Download</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_BBCS_Upload__c</fullName>
        <formula>UPC_Address__r.UPC_BBCS_Upload__c</formula>
        <label>BBCS Upload</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_FTTH_Alert__c</fullName>
        <formula>UPC_Address__r.UPC_FTTH_Alert__c</formula>
        <label>FTTH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_FTTH_Checkbox__c</fullName>
        <description>Created by Nexell to be used by Cloudsense.</description>
        <formula>IF(UPC_Address__r.UPC_FTTH__c,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTTH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_FTTH_Download__c</fullName>
        <formula>UPC_Address__r.UPC_FTTH_Download__c</formula>
        <label>FTTH Download</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_FTTH_Upload__c</fullName>
        <formula>UPC_Address__r.UPC_FTTH_Upload__c</formula>
        <label>FTTH Upload</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_HFC_Alert__c</fullName>
        <formula>UPC_Address__r.UPC_HFC_Alert__c</formula>
        <label>HFC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_HFC_Checkbox__c</fullName>
        <description>Created by nexell to be used by cloudsense.</description>
        <formula>IF(UPC_Address__r.UPC_HFC__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HFC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_HFC_Download__c</fullName>
        <formula>UPC_Address__r.UPC_HFC_Download__c</formula>
        <label>HFC Download</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_HFC_Suitability__c</fullName>
        <formula>TEXT(UPC_Address__r.UPC_HFC_Suitability__c)</formula>
        <label>HFC Suitability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_HFC_Upload__c</fullName>
        <formula>UPC_Address__r.UPC_HFC_Upload__c</formula>
        <label>HFC Upload</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Last_Footprint_Check__c</fullName>
        <formula>UPC_Address__r.UPC_Last_Footprint_Check__c</formula>
        <label>Last Footprint Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_Latitude__c</fullName>
        <formula>TEXT(UPC_Address__r.UPC_Geolocation__Latitude__s)</formula>
        <label>Latitude</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Longitude__c</fullName>
        <formula>TEXT(UPC_Address__r.UPC_Geolocation__Longitude__s)</formula>
        <label>Longitude</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Network_Model__c</fullName>
        <formula>TEXT(UPC_Address__r.UPC_Partner_Network_Model__c)</formula>
        <label>Partner Network Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Site_Address_Link__c</fullName>
        <description>Used to name the site address with a hyperlink to the record.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id , 
UPC_Address__r.UPC_Address_Formula__c
, &quot;_self&quot; )</formula>
        <label>Site Address Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Site_Address_Name__c</fullName>
        <description>Used in CS Sales Console for representation of Address in Address Search Results.</description>
        <formula>UPC_Address__r.UPC_Address_Formula__c</formula>
        <label>Site Address Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Site_Primary_Address_Name__c</fullName>
        <description>Used in CS Sales Console for representation of Site in Address Search Results.</description>
        <formula>UPC_Site__r.UPC_ADBASE_Address__r.UPC_Address_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Primary Address Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Site__c</fullName>
        <label>Site</label>
        <referenceTo>UPC_Site__c</referenceTo>
        <relationshipLabel>Site Addresses</relationshipLabel>
        <relationshipName>Site_Addresses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UPC_ULL_CU_Alert__c</fullName>
        <formula>UPC_Address__r.UPC_ULL_CU_Alert__c</formula>
        <label>ULL CU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_ULL_CU_Checkbox__c</fullName>
        <formula>IF(  UPC_Address__r.UPC_ULL_CU__c  ,true,false)</formula>
        <label>ULL CU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_ULL_CU_Downoad__c</fullName>
        <formula>UPC_Address__r.UPC_ULL_CU_Download__c</formula>
        <label>ULL CU Downoad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_ULL_CU_Upload__c</fullName>
        <formula>UPC_Address__r.UPC_ULL_CU_Upload__c</formula>
        <label>ULL CU Upload</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Site Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UPC_Site_Address_Link__c</columns>
        <columns>UPC_FTTH_Alert__c</columns>
        <columns>UPC_HFC_Alert__c</columns>
        <columns>UPC_HFC_Suitability__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SA-{0000000}</displayFormat>
        <label>Site Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>